[package]
name = "LakituBot"
version = "1.0.0"
authors = ["Ethan Jones <ethan@dreamin.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
rand = "0.8.3"
libloading = "0.7.0"
lazy_static = "1.4.0"
lakitu_lib = { path = "../LakituLib" }